tests/NormalTests/paczka1/fuzzy1/43176826.err
Error in line 5: AHxLkuX A287 59,2
Error in line 9: A12 A134 37,1
Error in line 15: kbp62L6c1k S25 265
Error in line 25: Wtr A12 -1,9
Error in line 28: A12 A134 39,4
